# edgar-insights

./: .env  .gitignore  .pdm-python  13F-HR.txt  README.md  download_data.py  pyproject.toml  requirements.txt  tickers.json
.vercel/: project.json
backend/: main.py
data/analysis/: AAPL_timeline_analysis.json  DVLT_timeline_analysis.json  RANI_timeline_analysis.json  analysis_summary.json  bridgewater_13f_parsed.json  bridgewater_holdings.csv
data/cik_database/: cik_database.csv  cik_database.json  company_tickers.json  download_summary.json
data/sec_filings/: 000091412106001785_bd033106-13fa1.txt  000091412106001882_bd90872-13fa2.txt  000091412106001884_bd90871-13fa1.txt  000091412108000643_bd90872-13fa.txt  000091412108000647_bd90872630-13fa2.txt  000091412109001094_bd123105-13fa1.txt  000091412109001096_bd033106-13fa1.txt  000091412109001098_bd123107-13fa1.txt  000091412109001100_bd033108-13fa1.txt  000091412109001102_bd063008-13fa3.txt  000091412109001104_bd093008-13fa1.txt  000091412109001106_bd123108-13fa1.txt  000091412109001108_bd033109-13fa1.txt  000117266124004026_0001172661-24-004026.txt  000156761918000074_0001567619-18-000074.txt  000156761918000646_0001567619-18-000646.txt
data/submissions/: README.md
docs/sec-filings/: README.md  core-financial-reports.md  investment-company.md  ownership-insider.md  proxy-shareholder.md  registration-statements.md  regulatory-administrative.md  supporting-documents.md
frontend/: index.html
frontend/src/: App.jsx
scripts/bash/: analyze_timeline.sh  download_all_sec_submissions.sh  download_data.sh  run_full_download.sh
(+15800 files in other folders)
